<?xml version="1.0"?>
<package>
  <name>marty_description</name>
  <version>0.0.0</version>
  <description>ROS package containing the description of Marty the Robot (Visual, URDF, Meshes)</description>

  <maintainer email="alex.bordallo@robotical.io">Alejandro Bordallo</maintainer>

  <license>Apache</license>

  <!-- <url type="website">http://wiki.ros.org/marty_description</url> -->
  <url type="website">http://robotical.io/</url>

  <author email="alex.bordallo@robotical.io">Alejandro Bordallo</author>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
